# netcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-windows-platform.yml
example/: connect.cpp
include/net/: Context.hpp  Dns.hpp  Endpoint.hpp  Exception.hpp  IoCore.hpp  IoSystem.hpp  IpAddress.hpp  Native.hpp  Socket.hpp  netcpp.hpp
netcpp/: netcpp.sln
netcpp/DummyClient/: DummyClient.cpp  DummyClient.vcxproj  DummyClient.vcxproj.filters
netcpp/TestServer/: Listener.cpp  Listener.h  Listener.hpp  TestServer.vcxproj  TestServer.vcxproj.filters  main.cpp
netcpp/netcpp/: IPAddress.cpp  IPEndPoint.cpp  Socket.cpp  SocketAsyncEventArgs.cpp  SocketEx.cpp  netcpp.vcxproj  netcpp.vcxproj.filters  pch.h
netcpp/netcpp/net/: Agent.hpp  CorePch.hpp  Dns.hpp  Extension.hpp  IPAddress.hpp  IPEndPoint.hpp  Listener.hpp  NetCore.hpp  Netexcept.hpp  Socket.hpp  SocketAsyncEvent.hpp  SocketAsyncEventArgs.hpp  SocketEx.hpp  dispatcher.hpp  dns.hpp  endpoint.hpp  exception.hpp  io_context.hpp  ip_address.hpp  netcpp.hpp  socket.hpp  wsock.hpp
netcpp/netcpp/src/: Agent.cpp  Dns.cpp  Extension.cpp  IPAddress.cpp  IPEndPoint.cpp  Listener.cpp  NetCore.cpp  Netexcept.cpp  Socket.cpp  SocketAsyncEvent.cpp  SocketAsyncEventArgs.cpp  dispatcher.cpp  dns.cpp  endpoint.cpp  exception.cpp  io_context.cpp  ip_address.cpp  netcpp.cpp  pch.h  socket.cpp  wsock.cpp
src/: Context.cpp  Dns.cpp  Endpoint.cpp  Exception.cpp  IoCore.cpp  IoSystem.cpp  IpAddress.cpp  Native.cpp  PCH.h  Socket.cpp  netcpp.cpp
test/: test.cpp
